...
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="MissingConstraints" />


<!--    <EditText-->

<!--        android:id="@+id/locationEditText"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="64dp"-->
<!--        android:autofillHints=""-->
<!--        android:background="@color/white"-->
<!--        android:hint="@string/search_pets"-->
<!--        android:inputType="text"-->
<!--        android:minHeight="48dp"-->
<!--        android:padding="5dp"-->
<!--        android:textColorHint="#757575"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/findPetsButton"-->
<!--        app:layout_constraintHorizontal_bias="0.462"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent" />-->

    <Button
        android:id="@+id/findPetsButton"
...
